// Jest Snapshot v1, https://jestjs.io/docs/snapshot-testing

exports[`renders a CTABanner correctly when invalid icon is specified 1`] = `
<DocumentFragment>
  .emotion-0 {
  margin: 16px 0;
  font-size: 13px;
  background-color: #E1F7FF;
  border: 1px solid #C3E7FE;
  color: #083C90;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  border-radius: 6px;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  font-size: 14px;
  margin: 24px 0px;
  min-height: 44px;
  padding: 9px 12px 9px 20px;
  position: relative;
  cursor: pointer;
}

.emotion-0>div>div>* {
  margin: 0 0 12px;
}

.emotion-0>div>div>*:last-child {
  margin: 0;
}

.emotion-0 p {
  margin: 0;
}

.emotion-0 p,
.emotion-0 a {
  font-size: 13px;
}

.emotion-0 a:hover {
  text-underline-offset: 3px;
}

.dark-theme .emotion-0 {
  background-color: #0C2657;
  border: 1px solid #083C90;
  color: #C3E7FE;
}

.emotion-0>p {
  margin-left: 15px;
}

.emotion-1 {
  width: 26px;
  min-width: 26px;
  height: 26px;
  background-color: #C3E7FE;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  border: 1px solid #016BF8;
  border-radius: 20px;
  margin-left: -5px;
}

.emotion-2 {
  color: #016BF8;
  -webkit-flex-shrink: 0;
  -ms-flex-negative: 0;
  flex-shrink: 0;
}

.emotion-3 {
  margin: unset;
  font-family: 'Euclid Circular A','Helvetica Neue',Helvetica,Arial,sans-serif;
  color: #001E2B;
  font-size: 13px;
  line-height: 20px;
  color: #001E2B;
  font-weight: 400;
  margin-bottom: 16px;
  color: var(--font-color-primary);
}

.emotion-3 strong,
.emotion-3 b {
  font-weight: 600;
}

.emotion-4 {
  font-family: 'Euclid Circular A','Helvetica Neue',Helvetica,Arial,sans-serif;
  display: inline;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-text-decoration: none;
  text-decoration: none;
  text-decoration-color: transparent;
  cursor: pointer;
  font-size: inherit;
  line-height: inherit;
  -webkit-appearance: none;
  -moz-appearance: none;
  -ms-appearance: none;
  appearance: none;
  background: none;
  border: none;
  padding: 0;
  font-size: 13px;
  line-height: 20px;
  color: #016BF8;
  font-weight: 400;
  display: inline;
  color: var(--link-color-primary);
  font-weight: var(--link-font-weight);
}

.emotion-4:hover,
.emotion-4[data-hover='true'],
.emotion-4:focus-visible,
.emotion-4[data-focus='true'] {
  -webkit-text-decoration: underline;
  text-decoration: underline;
  -webkit-transition: text-decoration 150ms ease-in-out;
  transition: text-decoration 150ms ease-in-out;
  text-underline-offset: 4px;
  text-decoration-thickness: 2px;
}

.emotion-4:focus {
  outline: none;
}

.emotion-4:hover,
.emotion-4[data-hover='true'] {
  text-decoration-color: #E8EDEB;
}

.emotion-4:focus-visible,
.emotion-4[data-focus='true'] {
  text-decoration-color: #016BF8;
}

.emotion-4>span>code,
.emotion-4>code {
  color: var(--link-color-primary);
  font-weight: var(--link-font-weight);
}

<div
    class="emotion-0"
  >
    <div
      class="emotion-1"
    >
      <svg
        aria-label="Play Icon"
        class="emotion-2"
        height="16"
        role="img"
        viewBox="0 0 16 16"
        width="16"
      >
        <path
          clip-rule="evenodd"
          d="M13.7789 6.70433C14.7711 7.28315 14.7711 8.71685 13.7789 9.29567L6.25581 13.6841C5.25582 14.2674 4 13.5461 4 12.3884L4 3.61155C4 2.45387 5.25582 1.73256 6.25581 2.31589L13.7789 6.70433Z"
          fill="currentColor"
          fill-rule="evenodd"
        />
      </svg>
    </div>
    <p
      class="emotion-3"
    >
      If you prefer learning through videos, try this lesson on 
      <a
        class="lg-ui-0001 emotion-4"
        href="https://university.mongodb.com/"
        target="_self"
      >
        <span>
          MongoDB University
        </span>
      </a>
    </p>
  </div>
</DocumentFragment>
`;

exports[`renders a CTABanner correctly when lowercase icon is specified 1`] = `
<DocumentFragment>
  .emotion-0 {
  margin: 16px 0;
  font-size: 13px;
  background-color: #E1F7FF;
  border: 1px solid #C3E7FE;
  color: #083C90;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  border-radius: 6px;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  font-size: 14px;
  margin: 24px 0px;
  min-height: 44px;
  padding: 9px 12px 9px 20px;
  position: relative;
  cursor: pointer;
}

.emotion-0>div>div>* {
  margin: 0 0 12px;
}

.emotion-0>div>div>*:last-child {
  margin: 0;
}

.emotion-0 p {
  margin: 0;
}

.emotion-0 p,
.emotion-0 a {
  font-size: 13px;
}

.emotion-0 a:hover {
  text-underline-offset: 3px;
}

.dark-theme .emotion-0 {
  background-color: #0C2657;
  border: 1px solid #083C90;
  color: #C3E7FE;
}

.emotion-0>p {
  margin-left: 15px;
}

.emotion-1 {
  width: 26px;
  min-width: 26px;
  height: 26px;
  background-color: #C3E7FE;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  border: 1px solid #016BF8;
  border-radius: 20px;
  margin-left: -5px;
}

.emotion-2 {
  color: #016BF8;
  -webkit-flex-shrink: 0;
  -ms-flex-negative: 0;
  flex-shrink: 0;
}

.emotion-3 {
  margin: unset;
  font-family: 'Euclid Circular A','Helvetica Neue',Helvetica,Arial,sans-serif;
  color: #001E2B;
  font-size: 13px;
  line-height: 20px;
  color: #001E2B;
  font-weight: 400;
  margin-bottom: 16px;
  color: var(--font-color-primary);
}

.emotion-3 strong,
.emotion-3 b {
  font-weight: 600;
}

.emotion-4 {
  font-family: 'Euclid Circular A','Helvetica Neue',Helvetica,Arial,sans-serif;
  display: inline;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-text-decoration: none;
  text-decoration: none;
  text-decoration-color: transparent;
  cursor: pointer;
  font-size: inherit;
  line-height: inherit;
  -webkit-appearance: none;
  -moz-appearance: none;
  -ms-appearance: none;
  appearance: none;
  background: none;
  border: none;
  padding: 0;
  font-size: 13px;
  line-height: 20px;
  color: #016BF8;
  font-weight: 400;
  display: inline;
  color: var(--link-color-primary);
  font-weight: var(--link-font-weight);
}

.emotion-4:hover,
.emotion-4[data-hover='true'],
.emotion-4:focus-visible,
.emotion-4[data-focus='true'] {
  -webkit-text-decoration: underline;
  text-decoration: underline;
  -webkit-transition: text-decoration 150ms ease-in-out;
  transition: text-decoration 150ms ease-in-out;
  text-underline-offset: 4px;
  text-decoration-thickness: 2px;
}

.emotion-4:focus {
  outline: none;
}

.emotion-4:hover,
.emotion-4[data-hover='true'] {
  text-decoration-color: #E8EDEB;
}

.emotion-4:focus-visible,
.emotion-4[data-focus='true'] {
  text-decoration-color: #016BF8;
}

.emotion-4>span>code,
.emotion-4>code {
  color: var(--link-color-primary);
  font-weight: var(--link-font-weight);
}

<div
    class="emotion-0"
  >
    <div
      class="emotion-1"
    >
      <svg
        aria-label="Bell Icon"
        class="emotion-2"
        height="16"
        role="img"
        viewBox="0 0 16 16"
        width="16"
      >
        <path
          clip-rule="evenodd"
          d="M12.6248 6.1383C12.4098 4.25462 11.09 2.74034 9.35673 2.21251C9.2281 1.52063 8.66955 1 8 1C7.33044 1 6.77189 1.52063 6.64326 2.21251C4.91 2.74034 3.59017 4.25462 3.37524 6.1383L2.92307 10.1011H2.94943C2.42507 10.1011 2 10.5262 2 11.0506C2 11.5749 2.42507 12 2.94943 12H13.0506C13.5749 12 14 11.5749 14 11.0506C14 10.5262 13.5749 10.1011 13.0506 10.1011H13.0769L12.6248 6.1383ZM8 15C6.89543 15 6 14.1046 6 13H10C10 14.1046 9.10457 15 8 15Z"
          fill="currentColor"
          fill-rule="evenodd"
        />
      </svg>
    </div>
    <p
      class="emotion-3"
    >
      If you prefer learning through videos, try this lesson on 
      <a
        class="lg-ui-0001 emotion-4"
        href="https://university.mongodb.com/"
        target="_self"
      >
        <span>
          MongoDB University
        </span>
      </a>
    </p>
  </div>
</DocumentFragment>
`;

exports[`renders a CTABanner correctly when no icon is specified 1`] = `
<DocumentFragment>
  .emotion-0 {
  margin: 16px 0;
  font-size: 13px;
  background-color: #E1F7FF;
  border: 1px solid #C3E7FE;
  color: #083C90;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  border-radius: 6px;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  font-size: 14px;
  margin: 24px 0px;
  min-height: 44px;
  padding: 9px 12px 9px 20px;
  position: relative;
  cursor: pointer;
}

.emotion-0>div>div>* {
  margin: 0 0 12px;
}

.emotion-0>div>div>*:last-child {
  margin: 0;
}

.emotion-0 p {
  margin: 0;
}

.emotion-0 p,
.emotion-0 a {
  font-size: 13px;
}

.emotion-0 a:hover {
  text-underline-offset: 3px;
}

.dark-theme .emotion-0 {
  background-color: #0C2657;
  border: 1px solid #083C90;
  color: #C3E7FE;
}

.emotion-0>p {
  margin-left: 15px;
}

.emotion-1 {
  width: 26px;
  min-width: 26px;
  height: 26px;
  background-color: #C3E7FE;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  border: 1px solid #016BF8;
  border-radius: 20px;
  margin-left: -5px;
}

.emotion-2 {
  color: #016BF8;
  -webkit-flex-shrink: 0;
  -ms-flex-negative: 0;
  flex-shrink: 0;
}

.emotion-3 {
  margin: unset;
  font-family: 'Euclid Circular A','Helvetica Neue',Helvetica,Arial,sans-serif;
  color: #001E2B;
  font-size: 13px;
  line-height: 20px;
  color: #001E2B;
  font-weight: 400;
  margin-bottom: 16px;
  color: var(--font-color-primary);
}

.emotion-3 strong,
.emotion-3 b {
  font-weight: 600;
}

.emotion-4 {
  font-family: 'Euclid Circular A','Helvetica Neue',Helvetica,Arial,sans-serif;
  display: inline;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-text-decoration: none;
  text-decoration: none;
  text-decoration-color: transparent;
  cursor: pointer;
  font-size: inherit;
  line-height: inherit;
  -webkit-appearance: none;
  -moz-appearance: none;
  -ms-appearance: none;
  appearance: none;
  background: none;
  border: none;
  padding: 0;
  font-size: 13px;
  line-height: 20px;
  color: #016BF8;
  font-weight: 400;
  display: inline;
  color: var(--link-color-primary);
  font-weight: var(--link-font-weight);
}

.emotion-4:hover,
.emotion-4[data-hover='true'],
.emotion-4:focus-visible,
.emotion-4[data-focus='true'] {
  -webkit-text-decoration: underline;
  text-decoration: underline;
  -webkit-transition: text-decoration 150ms ease-in-out;
  transition: text-decoration 150ms ease-in-out;
  text-underline-offset: 4px;
  text-decoration-thickness: 2px;
}

.emotion-4:focus {
  outline: none;
}

.emotion-4:hover,
.emotion-4[data-hover='true'] {
  text-decoration-color: #E8EDEB;
}

.emotion-4:focus-visible,
.emotion-4[data-focus='true'] {
  text-decoration-color: #016BF8;
}

.emotion-4>span>code,
.emotion-4>code {
  color: var(--link-color-primary);
  font-weight: var(--link-font-weight);
}

<div
    class="emotion-0"
  >
    <div
      class="emotion-1"
    >
      <svg
        aria-label="Play Icon"
        class="emotion-2"
        height="16"
        role="img"
        viewBox="0 0 16 16"
        width="16"
      >
        <path
          clip-rule="evenodd"
          d="M13.7789 6.70433C14.7711 7.28315 14.7711 8.71685 13.7789 9.29567L6.25581 13.6841C5.25582 14.2674 4 13.5461 4 12.3884L4 3.61155C4 2.45387 5.25582 1.73256 6.25581 2.31589L13.7789 6.70433Z"
          fill="currentColor"
          fill-rule="evenodd"
        />
      </svg>
    </div>
    <p
      class="emotion-3"
    >
      If you prefer learning through videos, try this lesson on 
      <a
        class="lg-ui-0001 emotion-4"
        href="https://university.mongodb.com/"
        target="_self"
      >
        <span>
          MongoDB University
        </span>
      </a>
    </p>
  </div>
</DocumentFragment>
`;

exports[`renders a CTABanner correctly when non-default icon is specified 1`] = `
<DocumentFragment>
  .emotion-0 {
  margin: 16px 0;
  font-size: 13px;
  background-color: #E1F7FF;
  border: 1px solid #C3E7FE;
  color: #083C90;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  border-radius: 6px;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  font-size: 14px;
  margin: 24px 0px;
  min-height: 44px;
  padding: 9px 12px 9px 20px;
  position: relative;
  cursor: pointer;
}

.emotion-0>div>div>* {
  margin: 0 0 12px;
}

.emotion-0>div>div>*:last-child {
  margin: 0;
}

.emotion-0 p {
  margin: 0;
}

.emotion-0 p,
.emotion-0 a {
  font-size: 13px;
}

.emotion-0 a:hover {
  text-underline-offset: 3px;
}

.dark-theme .emotion-0 {
  background-color: #0C2657;
  border: 1px solid #083C90;
  color: #C3E7FE;
}

.emotion-0>p {
  margin-left: 15px;
}

.emotion-1 {
  width: 26px;
  min-width: 26px;
  height: 26px;
  background-color: #C3E7FE;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  border: 1px solid #016BF8;
  border-radius: 20px;
  margin-left: -5px;
}

.emotion-2 {
  color: #016BF8;
  -webkit-flex-shrink: 0;
  -ms-flex-negative: 0;
  flex-shrink: 0;
}

.emotion-3 {
  margin: unset;
  font-family: 'Euclid Circular A','Helvetica Neue',Helvetica,Arial,sans-serif;
  color: #001E2B;
  font-size: 13px;
  line-height: 20px;
  color: #001E2B;
  font-weight: 400;
  margin-bottom: 16px;
  color: var(--font-color-primary);
}

.emotion-3 strong,
.emotion-3 b {
  font-weight: 600;
}

.emotion-4 {
  font-family: 'Euclid Circular A','Helvetica Neue',Helvetica,Arial,sans-serif;
  display: inline;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-text-decoration: none;
  text-decoration: none;
  text-decoration-color: transparent;
  cursor: pointer;
  font-size: inherit;
  line-height: inherit;
  -webkit-appearance: none;
  -moz-appearance: none;
  -ms-appearance: none;
  appearance: none;
  background: none;
  border: none;
  padding: 0;
  font-size: 13px;
  line-height: 20px;
  color: #016BF8;
  font-weight: 400;
  display: inline;
  color: var(--link-color-primary);
  font-weight: var(--link-font-weight);
}

.emotion-4:hover,
.emotion-4[data-hover='true'],
.emotion-4:focus-visible,
.emotion-4[data-focus='true'] {
  -webkit-text-decoration: underline;
  text-decoration: underline;
  -webkit-transition: text-decoration 150ms ease-in-out;
  transition: text-decoration 150ms ease-in-out;
  text-underline-offset: 4px;
  text-decoration-thickness: 2px;
}

.emotion-4:focus {
  outline: none;
}

.emotion-4:hover,
.emotion-4[data-hover='true'] {
  text-decoration-color: #E8EDEB;
}

.emotion-4:focus-visible,
.emotion-4[data-focus='true'] {
  text-decoration-color: #016BF8;
}

.emotion-4>span>code,
.emotion-4>code {
  color: var(--link-color-primary);
  font-weight: var(--link-font-weight);
}

<div
    class="emotion-0"
  >
    <div
      class="emotion-1"
    >
      <svg
        aria-label="University Icon"
        class="emotion-2"
        height="16"
        role="img"
        viewBox="0 0 16 16"
        width="16"
      >
        <path
          d="M8.5 4.61279C8.5 4.22996 8.69133 3.87245 9.00987 3.66009C9.66508 3.22328 10.3905 2.90238 11.1545 2.71139L13.5611 2.10972C13.7841 2.05399 14 2.22259 14 2.45237V10.3323C14 10.5698 14 10.6886 13.9571 10.7854C13.9193 10.8707 13.8583 10.9437 13.7811 10.9962C13.6936 11.0557 13.5768 11.077 13.3431 11.1194L9.44311 11.8285C9.11918 11.8874 8.95721 11.9169 8.83074 11.8714C8.71979 11.8315 8.62651 11.7536 8.56739 11.6516C8.5 11.5353 8.5 11.3707 8.5 11.0414V4.61279Z"
          fill="currentColor"
        />
        <path
          d="M2 2.45237C2 2.22259 2.21594 2.05399 2.43887 2.10972L4.84555 2.71139C5.6095 2.90238 6.33492 3.22328 6.99013 3.66009C7.30867 3.87245 7.5 4.22996 7.5 4.61279V11.0414C7.5 11.3707 7.5 11.5353 7.43262 11.6516C7.37349 11.7536 7.28022 11.8315 7.16926 11.8714C7.04279 11.9169 6.88083 11.8874 6.55689 11.8285L2.6569 11.1194C2.42324 11.077 2.30641 11.0557 2.21886 10.9962C2.14168 10.9437 2.08073 10.8707 2.04291 10.7854C2 10.6886 2 10.5698 2 10.3323V2.45237Z"
          fill="currentColor"
        />
        <path
          d="M2.00807 12.4106C2.05747 12.1389 2.31776 11.9587 2.58945 12.0081L7.73167 12.943C7.90911 12.9753 8.0909 12.9753 8.26833 12.943L13.4106 12.0081C13.6822 11.9587 13.9425 12.1389 13.9919 12.4106C14.0413 12.6822 13.8611 12.9425 13.5894 12.9919L9.45517 13.7436C9.29201 14.1782 8.70238 14.5 8 14.5C7.29762 14.5 6.70799 14.1782 6.54483 13.7436L2.41056 12.9919C2.13887 12.9425 1.95867 12.6822 2.00807 12.4106Z"
          fill="currentColor"
        />
      </svg>
    </div>
    <p
      class="emotion-3"
    >
      If you prefer learning through videos, try this lesson on 
      <a
        class="lg-ui-0001 emotion-4"
        href="https://university.mongodb.com/"
        target="_self"
      >
        <span>
          MongoDB University
        </span>
      </a>
    </p>
  </div>
</DocumentFragment>
`;
